--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.16",
     "@hookform/resolvers": "^5.0.1",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -48,10 +49,18 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.3",
     "@t3-oss/env-nextjs": "^0.13.6",
+    "@types/lodash": "^4.17.17",
+    "@vercel/functions": "^2.1.0",
+    "@webcontainer/api": "^1.6.1",
     "@workos-inc/authkit-nextjs": "^2.3.3",
     "@workos-inc/node": "^7.33.0",
     "@workos-inc/widgets": "1.0.0",
+    "@xterm/addon-clipboard": "^0.1.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
     "ai": "^4.3.16",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -62,7 +71,11 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jose": "^5.9.3",
+    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
+    "monaco-editor": "^0.52.2",
+    "motion": "^12.17.3",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.6.15",
@@ -72,6 +85,7 @@
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
+    "resumable-stream": "^2.2.0",
     "sonner": "^2.0.3",
     "stripe": "^16.12.0",
     "tailwind-merge": "^3.3.0",
@@ -91,7 +105,14 @@
     "typescript": "^5"
   },
   "description": "An open source version of v0 and lovable",
-  "keywords": ["nextjs", "next", "v0", "bolt", "replit", "lovable"],
+  "keywords": [
+    "nextjs",
+    "next",
+    "v0",
+    "bolt",
+    "replit",
+    "lovable"
+  ],
   "author": "eersnington",
   "license": "MIT",
   "homepage": "https://obby.dev",
