--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "@workos-inc/authkit-nextjs": "^2.3.3",
     "@workos-inc/node": "^7.33.0",
     "@workos-inc/widgets": "1.0.0",
+    "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "ai": "^4.3.16",
