--- a/package.json
+++ b/package.json
@@ -18,8 +18,25 @@
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.16",
+    "@codemirror/autocomplete": "^6.18.3",
+    "@codemirror/commands": "^6.7.1",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.3.1",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/lang-sass": "^6.0.2",
+    "@codemirror/lang-vue": "^0.1.3",
+    "@codemirror/lang-wast": "^6.0.2",
+    "@codemirror/language": "^6.10.6",
+    "@codemirror/search": "^6.5.8",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.35.0",
     "@hookform/resolvers": "^5.0.1",
-    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -50,6 +67,7 @@
     "@radix-ui/themes": "^3.1.3",
     "@t3-oss/env-nextjs": "^0.13.6",
     "@types/lodash": "^4.17.17",
+    "@uiw/codemirror-theme-vscode": "^4.23.13",
     "@vercel/functions": "^2.1.0",
     "@webcontainer/api": "^1.6.1",
     "@workos-inc/authkit-nextjs": "^2.3.3",
@@ -75,7 +93,6 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
-    "monaco-editor": "^0.52.2",
     "motion": "^12.17.3",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
@@ -87,6 +104,7 @@
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "resumable-stream": "^2.2.0",
+    "shiki": "^3.6.0",
     "sonner": "^2.0.3",
     "stripe": "^16.12.0",
     "tailwind-merge": "^3.3.0",
