--- a/biome.json
+++ b/biome.json
@@ -45,7 +45,8 @@
       },
       "correctness": {
         "noUnusedImports": "warn",
-        "noUnusedVariables": "warn"
+        "noUnusedVariables": "warn",
+        "useExhaustiveDependencies": "warn"
       },
       "recommended": true
     }
