gonna be breaking a lot of fucking things - LFG
following vercel's AI SDK example to rewrite this

--- a/biome.json
+++ b/biome.json
@@ -44,6 +44,9 @@
       "style": {
         "noInferrableTypes": "off"
       },
+      "complexity": {
+        "noForEach": "off"
+      },
       "correctness": {
         "noUnusedImports": "warn",
         "noUnusedVariables": "warn",
