--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@ai-sdk/xai": "^1.2.16",
     "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-python": "^6.2.1",
     "@codemirror/language": "^6.11.1",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.37.2",
     "@codesandbox/sandpack-react": "^2.20.0",
     "@codesandbox/sandpack-themes": "^2.0.21",
@@ -66,6 +69,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "codemirror": "^6.0.2",
     "concurrently": "^9.1.0",
     "convex": "^1.24.3",
     "convex-helpers": "^0.1.89",
@@ -73,11 +77,13 @@
     "date-fns": "^4.1.0",
     "dedent": "^1.6.0",
     "embla-carousel-react": "^8.6.0",
+    "fast-deep-equal": "^3.1.3",
     "input-otp": "^1.4.2",
     "jose": "^5.9.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "motion": "^12.18.1",
+    "nanoid": "^5.1.5",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.6.15",
@@ -87,8 +93,10 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "sandpack-file-explorer": "^0.0.7",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
@@ -114,7 +122,14 @@
     "typescript": "^5"
   },
   "description": "An open source alternative to v0.dev",
-  "keywords": ["nextjs", "next", "v0", "bolt", "replit", "lovable"],
+  "keywords": [
+    "nextjs",
+    "next",
+    "v0",
+    "bolt",
+    "replit",
+    "lovable"
+  ],
   "author": "eersnington",
   "license": "MIT",
   "homepage": "https://obby.dev",
