--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@e2b/code-interpreter": "^1.5.1",
     "@hookform/resolvers": "^5.0.1",
+    "@mantine/hooks": "^8.1.2",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -67,6 +68,7 @@
     "@workos-inc/widgets": "1.0.0",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "codemirror": "^6.0.2",
@@ -96,7 +98,9 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
+    "redis": "^5.5.6",
     "remark-gfm": "^4.0.1",
+    "resumable-stream": "^2.2.1",
     "sandpack-file-explorer": "^0.0.7",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
