FRAGMENT ARTIFACT WORKS
but still needs a lot of improvement on layout of the chat when the fragment is "opened"

the chat layout is unusable and shit

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -79,7 +79,7 @@
         "noUselessElse": "off" // Stylistic opinion
       },
       "suspicious": {
-        "noExplicitAny": "warn" // We trust Vercelians to use any only when necessary
+        "noExplicitAny": "off" // We trust Vercelians to use any only when necessary
       },
       "nursery": {
         "noStaticElementInteractions": "warn",
