--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "lint:fix": "biome lint . --write && biome format --write ."
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^2.2.9",
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/google": "^1.2.18",
-    "@ai-sdk/openai": "^1.3.22",
-    "@ai-sdk/react": "^1.2.12",
-    "@ai-sdk/xai": "^1.2.16",
+    "@ai-sdk/amazon-bedrock": "^3.0.3",
+    "@ai-sdk/anthropic": "^2.0.1",
+    "@ai-sdk/gateway": "^1.0.4",
+    "@ai-sdk/google": "^2.0.3",
+    "@ai-sdk/openai": "^2.0.5",
+    "@ai-sdk/vercel": "^1.0.2",
+    "@ai-sdk/xai": "^2.0.2",
     "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/commands": "^6.8.1",
     "@codemirror/lang-python": "^6.2.1",
@@ -31,6 +32,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@mantine/hooks": "^8.1.2",
     "@monaco-editor/react": "^4.7.0",
+    "@openrouter/ai-sdk-provider": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -66,7 +68,7 @@
     "@workos-inc/authkit-nextjs": "^2.3.3",
     "@workos-inc/node": "^7.33.0",
     "@workos-inc/widgets": "1.0.0",
-    "ai": "^4.3.16",
+    "ai": "^5.0.8",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -101,10 +103,8 @@
     "redis": "^5.5.6",
     "remark-gfm": "^4.0.1",
     "resumable-stream": "^2.2.1",
-    "sandpack-file-explorer": "^0.0.7",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
-    "stripe": "^16.12.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "usehooks-ts": "^3.1.1",
@@ -137,5 +137,6 @@
   ],
   "author": "eersnington",
   "license": "MIT",
-  "homepage": "https://obby.dev"
+  "homepage": "https://obby.dev",
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
