--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.4",
     "@workos-inc/authkit-nextjs": "^2.4.6",
+    "@workos-inc/node": "^7.66.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "server-only": "^0.0.1",
