ultracite lint fix
note: i have not included obbyweb folder in biome config.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -8,7 +8,11 @@
       "!**/packages/design-system/lib/**",
       "!**/packages/design-system/hooks/**",
       "!**/apps/docs/**/*.json",
-      "!**/apps/email/.react-email/**"
+      "!**/apps/email/.react-email/**",
+      "!**/apps/api/scripts/**",
+      "!**/apps/app/scripts/**",
+      "!**/apps/obbyweb/**",
+      "!**/*.css"
     ]
   }
 }
