--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -35,6 +35,7 @@
     "fuse.js": "^7.1.0",
     "import-in-the-middle": "^1.13.2",
     "lucide-react": "^0.511.0",
+    "ms": "^2.1.3",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "nuqs": "2.4.3",
@@ -60,6 +61,7 @@
     "@types/react-dom": "19.1.5",
     "jsdom": "^26.1.0",
     "tailwindcss": "^4.1.7",
+    "raw-loader": "4.0.2",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
   }
