--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -22,6 +22,6 @@ KNOCK_FEED_CHANNEL_ID=""
 NEXT_PUBLIC_WORKOS_REDIRECT_URI="http://localhost:3000/callback"
 NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_POSTHOG_HOST=""
-NEXT_PUBLIC_DOCS_URL="http://localhost:3004"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NEXT_PUBLIC_WEB_URL="http://localhost:3001"
+NEXT_PUBLIC_API_URL="http://localhost:3001"
+NEXT_PUBLIC_DOCS_URL="http://localhost:3002"
