--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -7,9 +7,9 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai": "^2.0.8",
     "@t3-oss/env-nextjs": "^0.13.4",
-    "ai": "^4.3.16",
+    "ai": "5.0.0-beta.29",
     "react": "^19.1.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.0",
