--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -7,7 +7,10 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^1.0.4",
     "@ai-sdk/openai": "^2.0.8",
+    "@ai-sdk/react": "2.0.0-beta.29",
+    "@ai-sdk/vercel": "1.0.0-alpha.7",
     "@t3-oss/env-nextjs": "^0.13.4",
     "ai": "5.0.0-beta.29",
     "react": "^19.1.0",
