--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -61,6 +61,7 @@
     "@repo/typescript-config": "workspace:*",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
+    "@types/ms": "^2.1.0",
     "@types/node": "22.15.21",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
