--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,16 +1,18 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
-  "extends": ["ultracite"],
+  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
+  "extends": [
+    "ultracite"
+  ],
   "files": {
     "includes": [
       "**",
-      "!**/packages/design-system/components/ui/**",
-      "!**/packages/design-system/lib/**",
-      "!**/packages/design-system/hooks/**",
+      "!**/packages/design-system/components/ui",
+      "!**/packages/design-system/lib",
+      "!**/packages/design-system/hooks",
       "!**/apps/docs/**/*.json",
-      "!**/apps/email/.react-email/**",
-      "!**/apps/api/scripts/**",
-      "!**/apps/app/scripts/**",
+      "!**/apps/email/.react-email",
+      "!**/apps/api/scripts",
+      "!**/apps/app/scripts",
       "!**/*.css"
     ]
   }
