--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,8 +1,20 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
-  "extends": [
-    "ultracite"
-  ],
+  "extends": ["ultracite"],
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "nursery": {
+        //Enforce type definitions to consistently use either interface or type.
+        "useConsistentTypeDefinitions": {
+          "level": "warn",
+          "options": {
+            "style": "type"
+          }
+        }
+      }
+    }
+  },
   "files": {
     "includes": [
       "**",
