--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -33,6 +33,7 @@
     "@repo/webhooks": "workspace:*",
     "@sentry/nextjs": "^9.22.0",
     "@t3-oss/env-nextjs": "^0.13.4",
+    "@tanstack/react-query": "^5.85.5",
     "@types/react-syntax-highlighter": "15.5.13",
     "@vercel/sandbox": "0.0.15",
     "ai": "5.0.0-beta.29",
