--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -42,7 +42,7 @@
     "import-in-the-middle": "^1.13.2",
     "lucide-react": "^0.511.0",
     "ms": "^2.1.3",
-    "next": "15.4.5",
+    "next": "15.5.1-canary.2",
     "next-themes": "^0.4.6",
     "nuqs": "2.4.3",
     "react": "19.1.0",
