--- a/packages/next-config/package.json
+++ b/packages/next-config/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "next": "15.4.5"
+    "next": "15.5.1-canary.2"
   },
   "dependencies": {
     "@next/bundle-analyzer": "15.3.2",
