--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "@ai-sdk/react": "2.0.0-beta.29",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -35,9 +36,11 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@repo/analytics": "workspace:*",
     "@repo/auth": "workspace:*",
     "@repo/observability": "workspace:*",
+    "ai": "5.0.0-beta.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,13 +55,16 @@
     "react-hook-form": "^7.56.4",
     "react-moveable": "^0.56.0",
     "react-resizable-panels": "^3.0.2",
+    "react-syntax-highlighter": "15.6.1",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
+    "streamdown": "^1.0.12",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.0",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
-    "zod": "^3.25.28"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
@@ -66,6 +72,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
+    "@types/react-syntax-highlighter": "15.5.13",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3"
