--- a/apps/obby/.env.example
+++ b/apps/obby/.env.example
@@ -1,30 +1,30 @@
 # Server
-WORKOS_CLIENT_ID=""
-WORKOS_API_KEY=""
-WORKOS_COOKIE_PASSWORD=""
-WORKOS_WEBHOOK_SECRET=""
 RESEND_FROM=""
-DATABASE_URL=""
 RESEND_TOKEN=""
-STRIPE_SECRET_KEY=""
-STRIPE_WEBHOOK_SECRET=""
-BETTERSTACK_API_KEY=""
-BETTERSTACK_URL=""
-FLAGS_SECRET=""
-ARCJET_KEY=""
-SVIX_TOKEN=""
-BASEHUB_TOKEN=""
-VERCEL_PROJECT_PRODUCTION_URL="http://localhost:3000"
-KNOCK_API_KEY=""
-KNOCK_FEED_CHANNEL_ID=""
-KNOCK_SECRET_API_KEY=""
+DATABASE_URL=""
 
 # Client
-NEXT_PUBLIC_WORKOS_REDIRECT_URI="http://localhost:3000/callback"
-NEXT_PUBLIC_KNOCK_API_KEY=""
-NEXT_PUBLIC_KNOCK_FEED_CHANNEL_ID=""
-NEXT_PUBLIC_POSTHOG_KEY=""
-NEXT_PUBLIC_POSTHOG_HOST=""
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NEXT_PUBLIC_API_URL="http://localhost:3001"
-NEXT_PUBLIC_DOCS_URL="http://localhost:3002"
+NEXT_PUBLIC_DOCS_URL="http://localhost:3001"
+
+
+# AI Provider KEYS (Optional, you can set it in client)
+OPENAI_API_KEY=""
+AI_GATEWAY_API_KEY=""
+ANTHROPIC_API_KEY=""
+GOOGLE_GENERATIVE_AI_API_KEY=""
+GROQ_API_KEY=""
+OPENROUTER_API_KEY=""
+
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_REGION="us-east-1"
+
+JINA_API_KEY=""
+
+# Vercel API keys for Sandbox
+VERCEL_TEAM_ID=""
+VERCEL_PROJECT_ID=""
+
+# https://vercel.com/account/settings/tokens
+VERCEL_TOKEN=""
