--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -22,21 +22,21 @@
     "@openrouter/ai-sdk-provider": "^1.1.2",
     "@repo/database": "workspace:*",
     "@repo/design-system": "workspace:*",
-    "@repo/feature-flags": "workspace:*",
     "@repo/next-config": "workspace:*",
-    "@repo/seo": "workspace:*",
     "@sentry/nextjs": "^9.22.0",
     "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-query": "^5.85.5",
     "@types/react-syntax-highlighter": "15.5.13",
     "@vercel/sandbox": "0.0.17",
+    "@vercel/toolbar": "^0.1.38",
     "ai": "5.0.0-beta.29",
     "botid": "1.4.5",
+    "effect": "^3.17.10",
     "fuse.js": "^7.1.0",
     "import-in-the-middle": "^1.13.2",
     "lucide-react": "^0.511.0",
     "ms": "^2.1.3",
-    "next": "15.5.1-canary.2",
+    "next": "15.5.2",
     "next-themes": "^0.4.6",
     "nuqs": "2.4.3",
     "react": "19.1.0",
