--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/openai": "^2.0.8",
     "@ai-sdk/react": "2.0.0-beta.29",
     "@ai-sdk/vercel": "1.0.0-alpha.7",
+    "@mendable/firecrawl-js": "^4.3.1",
     "@openrouter/ai-sdk-provider": "^1.1.2",
     "@repo/database": "workspace:*",
     "@repo/design-system": "workspace:*",
