--- a/apps/obby/.env.example
+++ b/apps/obby/.env.example
@@ -20,7 +20,7 @@ AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_REGION="us-east-1"
 
-JINA_API_KEY=""
+FIRECRAWL_API_KEY=""
 
 # Vercel API keys for Sandbox
 VERCEL_TEAM_ID=""
