--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -48,6 +48,7 @@
     "rehype-raw": "7.0.0",
     "remark-gfm": "4.0.1",
     "require-in-the-middle": "^7.5.2",
+    "streamdown": "^1.2.0",
     "swr": "2.3.4",
     "zod": "^3.25.28",
     "zustand": "^4.5.6"
