--- a/apps/obby/package.json
+++ b/apps/obby/package.json
@@ -47,6 +47,7 @@
     "rehype-raw": "7.0.0",
     "remark-gfm": "4.0.1",
     "require-in-the-middle": "^7.5.2",
+    "sonner": "^2.0.7",
     "streamdown": "^1.2.0",
     "swr": "2.3.4",
     "zod": "^3.25.28",
