--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,21 +9,22 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@databuddy/sdk": "^2.0.0",
+    "fumadocs-core": "15.7.7",
+    "fumadocs-mdx": "11.8.2",
+    "fumadocs-ui": "15.7.7",
     "next": "15.5.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.7.7",
-    "fumadocs-core": "15.7.7",
-    "fumadocs-mdx": "11.8.2"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
-    "typescript": "^5.9.2",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.12",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "postcss": "^8.5.6"
+    "typescript": "^5.9.2"
   }
 }
