--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,12 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+overrides:
+  path-to-regexp@>=4.0.0 <6.3.0: '>=6.3.0'
+  '@octokit/request-error@>=1.0.0 <5.1.1': '>=5.1.1'
+  esbuild@<=0.24.2: '>=0.25.0'
+  '@octokit/request@>=1.0.0 <8.4.1': '>=8.4.1'
+  '@octokit/plugin-paginate-rest@>=1.0.0 <9.2.2': '>=9.2.2'
+  cookie@<0.7.0: '>=0.7.0'
+  prismjs@<1.30.0: '>=1.30.0'
+  tmp@<=0.2.3: '>=0.2.4'
